--- a/configs.yml
+++ b/configs.yml
@@ -40,7 +40,7 @@ db_host : "lifetrusty-db.crfwoa4y7jzi.eu-west-2.rds.amazonaws.com"
 
 KEY : "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"
 db_port : "5000"
-token_password : "@5k_4_p@ss"
+token_password : "!+@5k_4_p@ss"
 
 
 
